--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <a href="about.html">about us</a>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">shop
+                                <a href="#" class="dropdown-toggle effect-3" data-toggle="dropdown">IQ's
                                     <b class="caret"></b>
                                 </a>
                                 <ul class="dropdown-menu">
