--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-    <title>Chronicle Education Category Bootstrap Responsive website Template | Home :: w3layouts</title>
+    <title>JavaByA4</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Chronicle Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -56,7 +56,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <span class="icon-bar"></span>
                         </button>
                         <h1>
-                            <a class="navbar-brand" href="index.html">Chronicle</a>
+                            <a class="navbar-brand" href="index.html">JavaByA4</a>
                         </h1>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -78,16 +78,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="shop.html">product catalog</a>
+                                        <a href="shop.html">CoreJava</a>
                                     </li>
                                     <li>
-                                        <a href="single_product.html">single product</a>
+                                        <a href="single_product.html">Spring-Core</a>
                                     </li>
                                     <li>
-                                        <a href="checkout.html">checkout</a>
+                                        <a href="checkout.html">Hibernate</a>
                                     </li>
 									<li>
-                                        <a href="payment.html">Payment</a>
+                                        <a href="payment.html">Maven</a>
                                     </li>
                                 </ul>
                             </li>
