--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <li>
                                         <a href="single_product.html">Spring-Core</a>
                                     </li>
+                                     <li>
+                                        <a href="single_product.html">Spring-MVC</a>
+                                    </li>
                                     <li>
                                         <a href="checkout.html">Hibernate</a>
                                     </li>
