--- a/index.html
+++ b/index.html
@@ -171,14 +171,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- banner-text -->
             <div class="banner-text">
                 <div class="container">
-                    <p class="b-txt">the</p>
                     <h2 class="title">
-                        Library
+                        Opportunity is on the Way
                     </h2>
                     <ul class="banner-txt">
-                        <li>share.</li>
-                        <li> explore. </li>
-                        <li>amplify.</li>
+                        <li>Be</li>
+                        <li> Prepared.</li>
                     </ul>
                 </div>
             </div>
@@ -539,144 +537,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <!-- //team-row ends here -->
             </div>
             <!-- // team container ends here -->
-        </div>
-        <!-- //team -->
-        <!--testimonials -->
-        <div class="reviews section" id="testimonials">
-            <div class="container">
-                <h4 class="rad-txt">
-                    <span class="abtxt1">visitors</span>
-                    <span class="abtext">testimonials</span>
-                </h4>
-                <div id="Carousel" class="slide carousel">
-                    <!-- Carousel items -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <div class="row">
-                                <div class="col-md-6  testi-main">
-                                    <div class="testi-grids">
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>convallis felis</h6>
-                                            <p>Lorem ipsum dolor sit amet.Cras rutrum iaculis enim, non mattis.</p>
-                                            <h5>Davidson</h5>
-                                        </div>
-                                        <div class="col-md-3 col-sm-3 col-xs-3  img-testi">
-                                            <img class="img-responsive" src="images/c3.jpg" alt="">
-                                        </div>
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6  testi-main">
-                                    <div class="testi-grids t2">
-                                        <div class="col-md-3 col-sm-3 col-xs-3 img-testi">
-                                            <img class="img-responsive" src="images/c2.jpg" alt="">
-                                        </div>
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>Cras rutrum</h6>
-                                            <p>Lorem ipsum dolor sit amet. enim, non convallis felis mattis.</p>
-                                            <h5>Clifford</h5>
-                                        </div>
-
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6  testi-main">
-                                    <div class="testi-grids">
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>felis mattis</h6>
-                                            <p>Lorem ipsum dolor sit amet.Cras rutrum iaculis enim, non yallis.</p>
-                                            <h5>Mercurio</h5>
-                                        </div>
-                                        <div class="col-md-3 col-sm-3 col-xs-3 img-testi">
-                                            <img class="img-responsive" src="images/c4.jpg" alt="">
-                                        </div>
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6  testi-main">
-                                    <div class="testi-grids t2">
-                                        <div class="col-md-3 col-sm-3 col-xs-3 img-testi">
-                                            <img class="img-responsive" src="images/c1.jpg" alt="">
-                                        </div>
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>Cras rutrum</h6>
-                                            <p>Lorem ipsum dolor sit amet. enim, non convallis felis mattis.</p>
-                                            <h5>Clifford</h5>
-                                        </div>
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--.row-->
-                        </div>
-                        <!--.item-->
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-md-6  testi-main">
-                                    <div class="testi-grids">
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>convallis felis</h6>
-                                            <p>Lorem ipsum dolor sit amet.Cras rutrum iaculis enim, non mattis.</p>
-                                            <h5>Davidson</h5>
-                                        </div>
-                                        <div class="col-md-3 col-sm-3 col-xs-3 img-testi">
-                                            <img class="img-responsive" src="images/c3.jpg" alt="">
-                                        </div>
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6 testi-main">
-                                    <div class="testi-grids t2">
-                                        <div class="col-md-3 col-sm-3 col-xs-3 img-testi">
-                                            <img class="img-responsive" src="images/c2.jpg" alt="">
-                                        </div>
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>Cras rutrum</h6>
-                                            <p>Lorem ipsum dolor sit amet. enim, non convallis felis mattis.</p>
-                                            <h5>Clifford</h5>
-                                        </div>
-
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6  testi-main">
-                                    <div class="testi-grids">
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>felis mattis</h6>
-                                            <p>Lorem ipsum dolor sit amet.Cras rutrum iaculis enim, non yallis.</p>
-                                            <h5>Mercurio</h5>
-                                        </div>
-                                        <div class="col-md-3 col-sm-3 col-xs-3 img-testi">
-                                            <img class="img-responsive" src="images/c4.jpg" alt="">
-                                        </div>
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-6  testi-main">
-                                    <div class="testi-grids t2">
-                                        <div class="col-md-3 col-sm-3 col-xs-3 img-testi">
-                                            <img class="img-responsive" src="images/c1.jpg" alt="">
-                                        </div>
-                                        <div class="col-md-9 col-sm-9 col-xs-9 team-w3ls-txt">
-                                            <h6>Cras rutrum</h6>
-                                            <p>Lorem ipsum dolor sit amet. enim, non convallis felis mattis.</p>
-                                            <h5>Clifford</h5>
-                                        </div>
-
-                                        <div class="clearfix"> </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--.row-->
-                        </div>
-                    </div>
-                    <!--.carousel-inner-->
-                    <a data-slide="prev" href="#Carousel" class="left carousel-control">‹</a>
-                    <a data-slide="next" href="#Carousel" class="right carousel-control">›</a>
-                </div>
-                <!--.Carousel-->
-                <div class="clearfix"> </div>
-            </div>
         </div>
         <!-- //testimonials-->
         <!-- footer-layouts -->
